# dba-pipeline

./: .env.example  .gitignore  .sqlfluff  CLAUDE.md  Cleaned_Notes.md  Notetaking.md   README.md  justfile  pyproject.toml  setup-server.sh
Notes/: Cleaned_Notes.md  Notetaking.md 
_to_delete/: tmp_obj_1XnAdS  tmp_obj_3GuWwO  tmp_obj_5VdY3R  tmp_obj_6tpVTQ  tmp_obj_9Ryo3N  tmp_obj_E7g5ZU  tmp_obj_FUlF5N  tmp_obj_IprQnR  tmp_obj_K43rMQ  tmp_obj_LDxmiS  tmp_obj_LPXW9O  tmp_obj_MFQ1uU  tmp_obj_OwdAnR  tmp_obj_QllPRQ  tmp_obj_RkCqGR  tmp_obj_XBnhDR  tmp_obj_Y71tBQ  tmp_obj_eqFjhR  tmp_obj_f9vFMR  tmp_obj_ftiJaS  tmp_obj_hsx1rO  tmp_obj_pUZbdO  tmp_obj_sBZOCU  tmp_obj_sfekwQ  tmp_obj_vbBVUO  tmp_obj_vnjdwS  tmp_obj_y4yAtQ  tmp_obj_zNBeDS
dashboard/: README.md
docs/: ai-log.md  best-practices.md  build-plan.md
docs/decisions/: 0001-ducklake-over-postgres-warehouse.md  0002-dbt-fusion-from-the-start.md
infra/: README.md  ducklake-setup.sh
ingestion/: README.md  requirements.txt  sql_database_pipeline.py
ingestion/.dlt/: config.toml
mcp/: README.md
orchestration/: README.md
prior-testing/dbt-ducklake/: .user.yml  dbt_project.yml  profiles.yml
prior-testing/dbt-ducklake/models/: sources.yml  stg_test_table.sql
transform/: README.md
